# ai-engineer-cookbook

./: LICENSE-CODE  LICENSE-DOCS  README.md
agents/: README.md
agents/build-from-scratch/: .env.local  Makefile  README.md  pyproject.toml
agents/build-from-scratch/chapter-1/: README.md  simple_llm_call.py
agents/build-from-scratch/chapter-2/: react_agent.py
agents/build-from-scratch/chapter-3/: function_calling_agent.py
agents/build-from-scratch/chapter-4/: agent.py
mcp/: README.md
mcp/crash-course/: README.md
mcp/crash-course/1-introduction/: README.md
mcp/crash-course/2-understanding-mcp/: README.md
mcp/crash-course/3-server-setup/: README.md
mcp/crash-course/4-advanced-setup/: README.md
mcp/crash-course/weather-mcp/: README.md  pyproject.toml  server.py
mcp/crash-course/weather-mcp/data/: mock_data.py
mcp/crash-course/weather-mcp/prompts/: weather_prompts.py
mcp/crash-course/weather-mcp/resources/: weather_resources.py
mcp/crash-course/weather-mcp/tools/: weather_tools.py
